--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     Learn how to configure a non-root public URL by running `npm run build`.
   -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" />
-  <title>MyBurger</title>
+  <title>React Complete Guide Redux</title>
 </head>
 
 <body>
